# OxReplay

./: .gitignore  AGENTS.md  CHARTER.md  CURRENT_BLOCKERS.md  Cargo.toml  LICENSE.md  OPERATIONS.md  README.md
docs/: IN_PROGRESS_FEATURE_WORKLIST.md  LOCAL_EXECUTION_DOCTRINE.md
docs/decisions/: DEC-001_RUST_FIRST_WORKSPACE_BASELINE.md  DEC-002_REPLAY_PLUMBING_FOR_UNDO_REDO_AND_MACRO_RECORDING.md  README.md
docs/handoffs/: HANDOFF_OXXLOBS_001_OBSERVATION_SEAM.md  HANDOFF_PACKET_TEMPLATE.md  HANDOFF_REGISTER.csv  OXXLOBS_INTEGRATION_INSPECTION_PROMPT.md  README.md
docs/spec/: DNA_RECALC_CLI_CONTRACT.md  DNA_RECALC_HOST.md  OXREPLAY_ADAPTER_AND_CONFORMANCE_MODEL.md  OXREPLAY_BUNDLE_WITNESS_AND_REGISTRY_MODEL.md  OXREPLAY_CAPABILITY_AND_PACK_TRACEABILITY.md  OXREPLAY_DNA_ONECALC_CONSUMPTION_MODEL.md  OXREPLAY_IMPLEMENTATION_BASELINE.md  OXREPLAY_INITIAL_ADAPTER_INTAKE_PLAN.md  OXREPLAY_OXXLOBS_OBSERVATION_SEAM.md  OXREPLAY_REPLAY_CLASS_AND_SCENARIO_REGISTER.md  OXREPLAY_RUNTIME_STRATA_AND_PACKAGE_MAP.md  OXREPLAY_SCOPE_AND_BOUNDARY.md  OXREPLAY_WITNESS_LIFECYCLE_TRANSITIONS.md  README.md
docs/test-corpus/: README.md
docs/test-corpus/bundles/: README.md
docs/test-corpus/witnesses/: README.md
docs/test-runs/: README.md
docs/test-runs/oxxlobs-seam-xlobs_capture_values_formulae_001-baseline/: command.txt  validate-bundle.json
docs/test-runs/w002-bundle-rb_bundle_index_projection_001-baseline/: command.txt  report.json  report.txt
docs/test-runs/w002-bundle-rb_manifest_minimal_valid_001-baseline/: command.txt
docs/test-runs/w002-bundle-rb_manifest_schema_invalid_001-baseline/: command.txt  report.json  report.txt
docs/test-runs/w002-bundle-rb_sidecar_resolution_roundtrip_001-baseline/: command.txt  report.json  report.txt
docs/test-runs/w003-conformance-adapter-claim-matrix-floor-baseline/: command.txt  report.json  report.txt
docs/test-runs/w005-dnarecalc-diff-baseline/: report.json
docs/upstream/: NOTES_FOR_FOUNDATION.md  NOTES_FOR_OXCALC.md  NOTES_FOR_OXFML.md  NOTES_FOR_OXFUNC.md  NOTES_FOR_OXVBA.md  NOTES_FOR_OXXLOBS.md  README.md
docs/worksets/: README.md  W001_REPO_BOOTSTRAP_AND_RUNTIME_STRATA.md  W002_BUNDLE_AND_SCHEMA_RUNTIME.md  W003_ADAPTER_CAPABILITY_AND_CONFORMANCE_HARNESS.md  W004_OXCALC_OXFML_ADAPTER_INTAKE_AND_REPLAY_PATH.md  W005_DNA_RECALC_CLI_SHELL_AND_PACK_EXPORT_BASELINE.md  W006_WITNESS_DISTILLATION_AND_LIFECYCLE_GOVERNANCE_BASELINE.md
formal/: README.md
scripts/: README.md  meta-check.ps1
src/: README.md
src/oxreplay-abstractions/: Cargo.toml
src/oxreplay-bundle/: Cargo.toml
src/oxreplay-conformance/: Cargo.toml
src/oxreplay-conformance/src/: lib.rs
src/oxreplay-core/: Cargo.toml
src/oxreplay-diff/: Cargo.toml
src/oxreplay-diff/src/: lib.rs
src/oxreplay-distill/: Cargo.toml
src/oxreplay-distill/src/: lib.rs
src/oxreplay-dnarecalc-cli/: Cargo.toml
src/oxreplay-dnarecalc-cli/src/: main.rs
src/oxreplay-explain/: Cargo.toml
src/oxreplay-governance/: Cargo.toml
src/oxreplay-governance/src/: lib.rs
states/: README.md
states/lifecycle/: README.md
states/registry/: README.md
tests/: README.md
tools/: README.md
(+72 files in other folders)
