[package]
name = "oxreplay-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
oxreplay-abstractions = { path = "../oxreplay-abstractions" }
oxreplay-governance = { path = "../oxreplay-governance" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
