[package]
name = "oxreplay-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
oxreplay-abstractions = { path = "../oxreplay-abstractions" }
oxreplay-core = { path = "../oxreplay-core" }
serde.workspace = true
