[package]
name = "oxreplay-dnarecalc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "dna-recalc"
path = "src/main.rs"

[dependencies]
oxreplay-abstractions = { path = "../oxreplay-abstractions" }
oxreplay-bundle = { path = "../oxreplay-bundle" }
oxreplay-conformance = { path = "../oxreplay-conformance" }
oxreplay-core = { path = "../oxreplay-core" }
oxreplay-diff = { path = "../oxreplay-diff" }
oxreplay-distill = { path = "../oxreplay-distill" }
oxreplay-explain = { path = "../oxreplay-explain" }
oxreplay-governance = { path = "../oxreplay-governance" }
serde_json.workspace = true
