[package]
name = "oxreplay-governance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
oxreplay-abstractions = { path = "../oxreplay-abstractions" }
serde.workspace = true
